Bug fix
Fixed a bug that was causing the send button to not line up with the input field.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ h1 {
 }
 
 #messageInput {
-    width: calc(100% - 56px);
+    width: calc(100% - 76px);
     height: 26px;
     margin: 0px;
     padding: 2px 80px 2px 6px;
@@ -181,8 +181,10 @@ h1 {
 }
 
 #sendMessageSubmitButton {
-    width: 55px;
+    width: 75px;
     height: 26px;
+    line-height: 18px;
+    /* text-align: left; */
     font-size: 1em;
     color: #DDCECC;
     font-weight: 600;
